--- a/_posts/2016-11-20-out-loud.markdown
+++ b/_posts/2016-11-20-out-loud.markdown
@@ -691,7 +691,13 @@ The story of your life.
 We confabulate about the past, and see a tragic future.
 Rosie retrospection and declinism.
 
-This is the subjectivity we attribute to ourselves.
+What we know is only based on what we already know, everything is linked
+based on what we already had.  
+Moreover, when only the information we choose can reach us we keep on
+going in a linear direction.
+
+This is the subjectivity we attribute to ourselves - and the one we need
+to break.
 
 We have many other biases, for instance the positive perception of
 our actions. Everyone thinks that what they are doing is good.
@@ -736,6 +742,9 @@ absorbed during your life. All is stored in the subconscious and mixed
 together later on in a different form, after having fermented for a
 while. Everything is a remix. And that is something you need to realize
 to deflate your ego and appreciate the world you live in.
+
+You aren't inventing, you are just mixing, adding up and linking to
+ideas you already know.
 
 The cameras watching on the play have to keep rolling otherwise the
 spectators will get bored and switch channel.
@@ -855,6 +864,9 @@ all the knowledge.
 
 In the infinite you are nothing new, everything already exist.  
 Your existence is insignificant, your life means nothing.
+
+All you are doing is taking known knowledge and adding new knowledge
+that resides on its peripherals.
 
 Infinity is close and far, it's an oxymoron.
 
