removing that and updating that

--- a/_posts/2016-11-20-out-loud.markdown
+++ b/_posts/2016-11-20-out-loud.markdown
@@ -23,43 +23,42 @@ Who are we anyway?
 
 
 This might sound insane or counter intuitive. This is not the sort of
-experiment your average person does.
+experiment your average person engages in.
 
-If someone catches you during this experiment they might think you are
+If someone catches you during the "procedure" they might think you are
 delusional or possessed.
 
-I couldn't grasp the meaning until recently when I finally got my
-independence - When I could finally have real time alone, hours on end.
+Its significance didn't anchor until recently, when I finally attained
+independence and could have real time alone - hours on end.
 
-That's when the thought occurred to me, why not speak to myself out loud.
+That's when the thought occurred to me: why not speak to myself out loud.
 
-Why not have a monologue.
+Why not have monologues.
 
 One can clearly see how this could lead to insanity but I was about to
 take the leap.
 
-Why not, why not explore the recursive faculty of the mind.
+Why not - Why not explore the recursive faculty of the mind; How it can
+crystallize every thought.
 
-How it can crystallize every thought.
-
-Usually when you train your muscles you don't always train the muscles
-themselves but you may just be more agile. The same happens with the
-brain, it becomes more apt and agile at the tasks you use it for. You
-are sculpting your neural pathways.
+When training the muscles you don't necessarily train the muscles
+themselves but you may train their agility instead. The same happens
+with the brain, it becomes more apt and agile at doing the tasks you
+use it for - sculpting your neural pathways.
 
 What fascinated me about this experiment is that it's obvious that there
-were going to be neural changes because everything you do makes changes
-in the brain. I was intrigued about which ones. And one can only wonder
-and gasp at how magnificent that is: the brain self trains itself from
-its own generated thoughts.
+were going to be neural changes because any action makes changes on the
+brain. I was intrigued about which. I gasped at how magnificent that is:
+the brain self trains itself from its own generated thoughts.
 
 
 We enter meta-cognition.
 
 
-Why didn't I start this before, probably because of social constructs
-that restrain us from doing so.  You are looked at as out of your mind
-if you are found talking to yourself in public.
+Why didn't I start this before?  
+Probably because of social constructs that restrain us from doing so.
+You are looked at as out of your mind if you are found talking to yourself
+in public.
 
 This is also a private moment which needs a private space. Just as making
 love, the amorous embrace with your significant other, you don't want
@@ -76,37 +75,37 @@ the cosmos.
 
 The big-bang of birth.
 
-We cannot think of an idea before it is even thought in our brain.
+We cannot think of an idea before it is even thought in our brain.  
 It flows.
 
-Most of the time they are banal and mundane, even repetitive.
+Most of the time thoughts are banal and mundane, even repetitive.
 
-Hearing yourself speak aloud every single one of your thoughts makes you
-realize that.
+Hearing yourself speak aloud every single one of them makes you realize
+that.
 
-Your brain just flushes itself into your mouth, making concrete everyone
-of your thoughts into words.
+Your brain effortlessly flushes itself into your mouth, making concrete
+everyone of your thoughts into words.  
 Vocalizing or verbalizing your internal thought process.
 
-Sometimes it's hard to materialize them and you find yourself seeking a
-wider vocabulary. Peculiarly, the more you do it the more specificity
+Sometimes it's hard to materialize them and you find yourself seeking
+a wider vocabulary. Peculiarly, the more you do it the more specificity
 you discover.
 
 The uneasiness dwindles.
 
-Your thoughts are now words. Words undergird your imagination because
-you are now able to pinpoint what you exactly mean.
+Your thoughts are now words. Words undergird your imagination and you
+are now able to pinpoint what you exactly mean.
 
-Or at least you're closer than ever before.
+...At least you're closer than ever before.
 
-What about the everyday effect of this experiment.
+What about the everyday effect of this experiment?
 
 What is conversation if not the transfer of concepts from one's mind to
 another's; the connection of two states.
 
 The fluency of your mind now let's you think throughout your sentences,
 which allows the listener to clearly depict your ideologies and the path
-that leads to them.
+that lead to them.
 
 
 ![2]({{site.baseurl}}/assets/out_loud/2.png)
@@ -121,97 +120,94 @@ Go on...
 The headaches are starting to settle, I'm unsure if they were caused by
 the experiment or by the unusual worries I've had in the last few days.
 
-Or the experiment might have acted like a catalyst and amplified the
-worries.
+Or the experiment might have been a catalyst and amplified the worries.
 
-One thing is clear: There's a refreshing and up-lifting feeling after
+One thing is clear: A refreshing and up-lifting feeling emerges after
 the monologues.
 
-It's as if I made peace with myself - ceasefire.
+It's a ceasefire, as if I made peace with myself.
 
-Isn't that an admirable concept, something to gaze upon.
+Isn't that an admirable concept, something to gaze upon?
 
 My brain is too complex for my brain to understand. And thus it has to
 converse with itself to map itself.
 
 But who's talking to who?
 
-During our daily life we constantly find ourselves describing our actions,
-telling ourselves what we ought to do.
+During our daily life we constantly find ourselves describing our actions
+and mandating ourselves.
 
 And then we act.
 
-Or a more risible scenario is when we tell ourselves about things we
-most certainly know about. Things protruding in evidence, we already
-know it. It's a fact in our minds, yet we still tell ourselves about it,
-narrating the story of our life.
+Or a more risible scenario is when we tell ourselves things we most
+already certainly know. Things protruding in evidence, we already know
+them. They are a facts in our minds, yet we still tell ourselves about
+them, narrating the story of our life.
 
 It's a positivism bias, a self-affirmation of our existence.
 
 Who are we talking to in the first place?  
 Why are we talking about things we already know?
 
-Why the two step process, why not skip directly the talk and insert
-the thought directly in its appropriate place. Not wasting resources on
-pantomime language.
+Why a two step process, why not skip the talk and insert the thought
+directly in its appropriate place. Not wasting resources on pantomime
+language.
 
 The experiment has brought this topic to light multiple times under
 another aspect.
 
-You are indeed conversing with yourself.  It seems as if you were two
-persons: You and your one second in the future self.
+You are indeed conversing with yourself as if you were two persons:
+You and your one second in the future self.
 
 Or, put otherwise: You and your next state of mind.
 
 You are indeed talking with the next version of yourself.
 
-Moreover, about the topic of having to pass by two steps to reach an
+Moreover, on the topic of having to pass by two steps to reach an
 understanding of the world - it's not imperative.
 
-I've come to the conclusion, during this experiment, that the flow can
-be much faster.
+I've come to the conclusion that during this experiment the flow can be
+much faster.
 
-Skip everything altogether, let it sink directly to the place where
+Skip everything altogether, let it sink instantly to the place where
 it belongs.
 
 We loose so much time ruminating the same sentences multiple times a day.
 
-Especially the mutter which often happens when you want to practice
-a speech.
+Especially the mutter which often happens when you practice a speech.
 
-If others could hear what is happening inside our minds they'd pair it
-with insanity.
+If others could hear the echo inside our minds they'd pair it with
+insanity.
 
-However, that's how everyone's brain is working.
+That's how everyone's brain is working.
 
 The machine underlying the brain isn't straight forward, it takes a lot
 of resources and like an idle processor it'll redirect its attention on
 vague relatively banal events while it's not necessary to do otherwise.
 
-Doing else wise is tiresome, but the experiment turns it into a sporting
-match.
+Doing the opposite is tiresome, but the experiment turns it into a
+sporting match.
 
 As I've said, the conversations are refreshing, and they are because of
 their meaningful aspect.
 
-You intentionally pick the topic of discussion you're gonna have with
-yourself.
+You intentionally pick a topic of discussion to have with yourself.
 
 Totally deliberate.
 
 As if you were with someone else, and you should do as so.
 
-The mundane recurrent discussions and echoes of your mind slowly fades.
-Instead you get more random and focused ideas.
+The mundane recurrent discussions slowly fades and instead you get more
+random and focused ideas.
 
 The latter being the most important.
 
 The center of attention of your brain spirals down on the notion you
-want to aboard on that day.
+want to aboard.
 
 This is tiresome...  
 I've noticed how the brain goes into "sleep" mode sometimes, even during
-the conversation. But that happens less frequently now and more after
+the conversation. But that happens less frequently during and more after
 the conversations.
 
 I've also found, to my big surprise, that it's not every day that you
@@ -229,7 +225,7 @@ I feel tired.
 ![3]({{site.baseurl}}/assets/out_loud/3.png)
 
 Dementia!
-Feeling schizophrenic in your own mind.
+Feeling schizophrenic of your own mind, claustrophobic.
 
 I bet I can sympathize with those people now.
 
@@ -251,7 +247,7 @@ experienced mild headaches and higher or better creativity.
 However, I'm unsure if it has been initiated by the experience. I can
 only assess that it has increased and is more spontaneous.
 
-A sort of creativity most people are lacking. One I've have been missing
+A type of creativity most people are lacking. One I've have been missing
 myself for years.
 
 (Where was I?)
@@ -262,10 +258,10 @@ It just flows!
 
 It's perplexing, why does it just flow?
 
-I have new idea.
+I have no idea.
 
 Yet sometimes I can't make the difference.  I'm afraid I won't be able
-discern between this sort of state and a sane state.
+discern between this state and a sane state.
 
 Afraid to fall into this category of individuals that can't see the
 difference between reality and dreams.
@@ -315,7 +311,7 @@ confirming biases.  A virtual world of your own.
 
 Maybe they've fallen into the infinite loophole of their minds.
 
-If infinity and black matter would have a metaphorical definition it
+If infinity and dark matter would have a metaphorical definition it
 would relate to this.
 
 Knowing that inside every brain there's an unimaginable depth is
@@ -329,7 +325,7 @@ To avoid falling you would have to feed your brain with stable facts
 instead of delusion.
 
 But what about some people who hold beliefs that are already based upon
-delusions, based on things that exists only as concepts.
+delusions, based on things that exist only as concepts.
 
 Isn't that similar to monks that spend years alone in caves, secluded
 from the world. I can understand why they fall into dementia and have
@@ -338,7 +334,7 @@ peculiar visions of the world.
 We need to emphasize: You cannot draw facts about reality from
 self-perception and subjective experiences.
 
-Events that happened inside of you, in your meditative state, cannot
+Events that happen inside of you, in your meditative state, cannot
 reflect reality.
 
 ![4]({{site.baseurl}}/assets/out_loud/4.png)
@@ -1412,6 +1408,7 @@ _Resources_:
 [http://www.newyorker.com/magazine/2012/12/24/utopian-for-beginners](http://www.newyorker.com/magazine/2012/12/24/utopian-for-beginners)  
 [http://ithkuil.net/](http://ithkuil.net/)  
 [https://www.amazon.com/Think-Aloud-Talk-Aloud-Approach-Building-Language-ebook/dp/B00EEBZPEW/ref=sr_1_1?s=books&ie=UTF8&qid=1479364119&sr=1-1&keywords=9780807772294](https://www.amazon.com/Think-Aloud-Talk-Aloud-Approach-Building-Language-ebook/dp/B00EEBZPEW/ref=sr_1_1?s=books&ie=UTF8&qid=1479364119&sr=1-1&keywords=9780807772294)  
+[The gap behind how you express concepts and what you think](http://cognitivemedium.com/tat/index.html)
 
 > While self-talk like “Now we are buckling you in the car seat so we)
 > can go to the store” is common parental practice, this book shows
