--- a/_posts/2016-04-02-health.markdown
+++ b/_posts/2016-04-02-health.markdown
@@ -200,18 +200,20 @@ For it to happen the cycle of life, carbon based entities, needs to go around.
 CO2 in the atmosphere helps plants grow and life in the ocean floor proliferate,
 which wouldn't happen with dormant volcanoes.
 
-The earth was getting colder before the industrial revolution of the 19th century.
-
-Climate change is happening but it's not as bad is it sounds.
+Climate change is happening but it's not as bad is it sounds, or at
+least not yet or maybe...
 
 On another hand, our emissions are fast, dangerous, and not regulated.
 We're not dealing with the issue correctly, poisoning ourselves in the process
-by infecting humans.
+by infecting humans (and other living beings.)
 
 We're part of the cycle, and without knowing it we're cleaning our own mess.
 
 We're killing ourselves - The earth equilibrium is killing us.  
 The end of the world is not the end of the planet, it's our end.
+
+[Here](http://climatekids.nasa.gov/carbon/)'s an easy explanation and
+[some stats](https://www.co2.earth/) and [projections](https://www.co2.earth/2100-projections).
 
 
 ![Food]({{site.baseurl}}/assets/health_food1.jpg)
