oups, forgot one

--- a/_posts/2017-03-06-projets-2017.markdown
+++ b/_posts/2017-03-06-projets-2017.markdown
@@ -148,6 +148,7 @@ Here are the ones I've recently finished or almost finished:
 * [The blank slate - Steven Pinker](https://en.wikipedia.org/wiki/The_Blank_Slate)
 * [Lord Of The Flies - William Golding](https://en.wikipedia.org/wiki/Lord_of_the_Flies)
 * [1984 - George Orwell](https://en.wikipedia.org/wiki/Nineteen_Eighty-Four) (Yeah, I only read extracts before and not the full book)
+* [God is not Great - Christopher Hitchens](https://en.wikipedia.org/wiki/God_Is_Not_Great)
 * [The Mysterious Benedict Society - Trenton Lee Stewart](https://en.wikipedia.org/wiki/The_Mysterious_Benedict_Society)
 * [Miningness](https://meaningness.com/)
 
