--- a/_posts/2016-10-25-x11-blah-blah.markdown
+++ b/_posts/2016-10-25-x11-blah-blah.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Xcb, X11, Xlib, Wayland?"
 date:   2016-10-25
 categories: unix
+podcast: 1
 podcast_mp3: http://podcast.nixers.net/feed/download.php?filename=nixers-podcast-2016-08-141.mp3
 podcast_ogg: https://raw.githubusercontent.com/nixers-projects/podcast/ogg/nixers-podcast-2016-08-14.ogg
 ---
